2008-07-14  Sven Neumann  <sven@gimp.org>

	* app/display/gimpdisplayshell-scale.c
	(gimp_display_shell_scale_setup): added some line breaks to
	improve readability.

2008-07-13  Martin Nordholts  <martinn@svn.gnome.org>

	* app/display/gimpdisplayshell-scale.[ch]
	(gimp_display_shell_center_image): Allow to choose what axes to
	center on.

	(gimp_display_shell_scale_fill)
	(gimp_display_shell_scale_fit_in): Explicitly center on both axes.

	* app/display/gimpdisplayshell.c (gimp_display_shell_fill): Center
	the image in the previously empty display shell. Rather hackish,
	but seems to work fine.

2008-07-13  Sven Neumann  <sven@gimp.org>

	* app/widgets/Makefile.am
	* app/widgets/gimpdbusservice.[ch]
	* app/widgets/dbus-service.xml: removed here ...

	* app/gui/Makefile.am
	* app/gui/gimpdbusservice.[ch]
	* app/gui/dbus-service.xml: ... and moved here.
	(gimp_dbus_service_activate): raise the first display instead of
	the toolbox.

	* app/gui/gui-unique.c (gui_unique_win32_idle_open): same change
	here, raise the display instead of the toolbox.

	* app/unique.c: changed accordingly.

2008-07-13  Sven Neumann  <sven@gimp.org>

	* app/unique.c
	* app/gui/gui-unique.c: on Win32, if the gimp binary is started
	without filenames, raise the toolbox, just as we do in the DBus
	code path.

2008-07-13  Aurimas Juška  <aurisj@svn.gnome.org>

	* app/unique.c (gimp_unique_win32_open): check for NULL pointer to
	prevent crash when there are no filenames provided.

2008-07-13  Martin Nordholts  <martinn@svn.gnome.org>

	* app/display/gimpdisplayshell.c (gimp_display_shell_new): Get rid
	of non-intelligent scrollbar stepper sensitivity code.

	* app/display/gimpdisplayshell-scroll.c
	(gimp_display_shell_scroll_clamp_offsets): Add intelligent
	scrollbar stepper sensitivity code.

2008-07-13  Martin Nordholts  <martinn@svn.gnome.org>

	* app/display/gimpdisplayshell-scroll.c
	(gimp_display_shell_setup_hscrollbar_with_value): Consistency
	cleanup.
