@@ -66,103 +66,103 @@ G_DEFINE_TYPE (GimpControllerKeyboard, gimp_controller_keyboard,
 static KeyboardEvent keyboard_events[] =
 {
   { GDK_Up, GDK_MOD1_MASK | GDK_CONTROL_MASK | GDK_SHIFT_MASK,
-    "key-up-shift-control-alt",
+    "cursor-up-shift-control-alt",
     N_("Cursor Up") },
   { GDK_Up, GDK_MOD1_MASK | GDK_CONTROL_MASK,
-    "key-up-control-alt",
+    "cursor-up-control-alt",
     N_("Cursor Up") },
   { GDK_Up, GDK_MOD1_MASK | GDK_SHIFT_MASK,
-    "key-up-shift-alt",
+    "cursor-up-shift-alt",
     N_("Cursor Up") },
   { GDK_Up, GDK_CONTROL_MASK | GDK_SHIFT_MASK,
-    "key-up-shift-control",
+    "cursor-up-shift-control",
     N_("Cursor Up") },
   { GDK_Up, GDK_MOD1_MASK,
-    "key-up-alt",
+    "cursor-up-alt",
     N_("Cursor Up") },
   { GDK_Up, GDK_CONTROL_MASK,
-    "key-up-control",
+    "cursor-up-control",
     N_("Cursor Up") },
   { GDK_Up, GDK_SHIFT_MASK,
-    "key-up-shift",
+    "cursor-up-shift",
     N_("Cursor Up") },
   { GDK_Up, 0,
-    "key-up",
+    "cursor-up",
     N_("Cursor Up") },
 
   { GDK_Down, GDK_MOD1_MASK | GDK_CONTROL_MASK | GDK_SHIFT_MASK,
-    "key-down-shift-control-alt",
+    "cursor-down-shift-control-alt",
     N_("Cursor Down") },
   { GDK_Down, GDK_MOD1_MASK | GDK_CONTROL_MASK,
-    "key-down-control-alt",
+    "cursor-down-control-alt",
     N_("Cursor Down") },
   { GDK_Down, GDK_MOD1_MASK | GDK_SHIFT_MASK,
-    "key-down-shift-alt",
+    "cursor-down-shift-alt",
     N_("Cursor Down") },
   { GDK_Down, GDK_CONTROL_MASK | GDK_SHIFT_MASK,
-    "key-down-shift-control",
+    "cursor-down-shift-control",
     N_("Cursor Down") },
   { GDK_Down, GDK_MOD1_MASK,
-    "key-down-alt",
+    "cursor-down-alt",
     N_("Cursor Down") },
   { GDK_Down, GDK_CONTROL_MASK,
-    "key-down-control",
+    "cursor-down-control",
     N_("Cursor Down") },
   { GDK_Down, GDK_SHIFT_MASK,
-    "key-down-shift",
+    "cursor-down-shift",
     N_("Cursor Down") },
   { GDK_Down, 0,
-    "key-down",
+    "cursor-down",
     N_("Cursor Down") },
 
   { GDK_Left, GDK_MOD1_MASK | GDK_CONTROL_MASK | GDK_SHIFT_MASK,
-    "key-left-shift-control-alt",
+    "cursor-left-shift-control-alt",
     N_("Cursor Left") },
   { GDK_Left, GDK_MOD1_MASK | GDK_CONTROL_MASK,
-    "key-left-control-alt",
+    "cursor-left-control-alt",
     N_("Cursor Left") },
   { GDK_Left, GDK_MOD1_MASK | GDK_SHIFT_MASK,
-    "key-left-shift-alt",
+    "cursor-left-shift-alt",
     N_("Cursor Left") },
   { GDK_Left, GDK_CONTROL_MASK | GDK_SHIFT_MASK,
-    "key-left-shift-control",
+    "cursor-left-shift-control",
     N_("Cursor Left") },
   { GDK_Left, GDK_MOD1_MASK,
-    "key-left-alt",
+    "cursor-left-alt",
     N_("Cursor Left") },
   { GDK_Left, GDK_CONTROL_MASK,
-    "key-left-control",
+    "cursor-left-control",
     N_("Cursor Left") },
   { GDK_Left, GDK_SHIFT_MASK,
-    "key-left-shift",
+    "cursor-left-shift",
     N_("Cursor Left") },
   { GDK_Left, 0,
-    "key-left",
+    "cursor-left",
     N_("Cursor Left") },
 
   { GDK_Right, GDK_MOD1_MASK | GDK_CONTROL_MASK | GDK_SHIFT_MASK,
-    "key-right-shift-control-alt",
+    "cursor-right-shift-control-alt",
     N_("Cursor Right") },
   { GDK_Right, GDK_MOD1_MASK | GDK_CONTROL_MASK,
-    "key-right-control-alt",
+    "cursor-right-control-alt",
     N_("Cursor Right") },
   { GDK_Right, GDK_MOD1_MASK | GDK_SHIFT_MASK,
-    "key-right-shift-alt",
+    "cursor-right-shift-alt",
     N_("Cursor Right") },
   { GDK_Right, GDK_CONTROL_MASK | GDK_SHIFT_MASK,
-    "key-right-shift-control",
+    "cursor-right-shift-control",
     N_("Cursor Right") },
   { GDK_Right, GDK_MOD1_MASK,
-    "key-right-alt",
+    "cursor-right-alt",
     N_("Cursor Right") },
   { GDK_Right, GDK_CONTROL_MASK,
-    "key-right-control",
+    "cursor-right-control",
     N_("Cursor Right") },
   { GDK_Right, GDK_SHIFT_MASK,
-    "key-right-shift",
+    "cursor-right-shift",
     N_("Cursor Right") },
   { GDK_Right, 0,
-    "key-right",
+    "cursor-right",
     N_("Cursor Right") }
 };
 
