@@ -21,22 +21,18 @@
     (debug-events no)
     (controller "GimpControllerKeyboard")
     (mapping
-        (map "key-up"            "view-scroll-up")
-        (map "key-down"          "view-scroll-down")
-        (map "key-left"          "view-scroll-left")
-        (map "key-right"         "view-scroll-right")
-        (map "key-up-shift"      "view-scroll-page-up")
-        (map "key-down-shift"    "view-scroll-page-down")
-        (map "key-left-shift"    "view-scroll-page-left")
-        (map "key-right-shift"   "view-scroll-page-right")
-        (map "key-up-control"    "view-scroll-top-border")
-        (map "key-down-control"  "view-scroll-bottom-border")
-        (map "key-left-control"  "view-scroll-left-border")
-        (map "key-right-control" "view-scroll-right-border")
-        (map "key-up-alt"        "tools-value-1-increase-skip")
-        (map "key-down-alt"      "tools-value-1-decrease-skip")
-        (map "key-left-alt"      "tools-value-1-decrease")
-        (map "key-right-alt"     "tools-value-1-increase")))
+        (map "cursor-up-shift"      "view-scroll-page-up")
+        (map "cursor-down-shift"    "view-scroll-page-down")
+        (map "cursor-left-shift"    "view-scroll-page-left")
+        (map "cursor-right-shift"   "view-scroll-page-right")
+        (map "cursor-up-control"    "view-scroll-top-border")
+        (map "cursor-down-control"  "view-scroll-bottom-border")
+        (map "cursor-left-control"  "view-scroll-left-border")
+        (map "cursor-right-control" "view-scroll-right-border")
+        (map "cursor-up-alt"        "tools-value-1-increase-skip")
+        (map "cursor-down-alt"      "tools-value-1-decrease-skip")
+        (map "cursor-left-alt"      "tools-value-1-decrease")
+        (map "cursor-right-alt"     "tools-value-1-increase")))
 
 # (GimpControllerInfo "Linux Input Example"
 #    (enabled yes)
